--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,3 +1,2 @@
-<h1>Edit article</h1>
+<h1 class="text-center mt-4">Edit articles</h1>
 <%= render 'form' %>
-<%= link_to 'Cancel & return to articles listings', articles_path %>
